--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,9 @@ search: true
 
 # Build settings
 markdown: kramdown
+repository: treize-khushrenada/mm-ghp
 remote_theme: mmistakes/minimal-mistakes
+theme: minimal-mistakes-jekyll
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
