--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Site Name
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Whaat is the site about- coverage for insights in ai products, content technologies and the society.
+  What is the site about- coverage for insights in ai products, content technologies and the society.
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: dark
