--- a/_config.yml
+++ b/_config.yml
@@ -67,22 +67,22 @@ author:
       url: "https://"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/arthurckw"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/treize-khushrenada"
     # - label: "Instagram"
       # icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
 footer:
-  links:
+  # links:
     - label: "Twitter"
       icon: "fab fa-twitter-square"
-      url: "https://twitter.com/"
+      url: "https://twitter.com/arthurckw"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/treize-khushrenada"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://instagram.com/"
