--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Arthur Cho
-masthead_title: "heyarthur.com"
+masthead_title: "heyarthur.com- revamp in progress"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   What is the site about- coverage for insights in ai products, content technologies and the society.
