--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Arthur Cho
-masthead_title: "heyarthur.com- revamp in progress"
+title: "Arthur C."
+masthead_title: "Arthur C., AI & Data Science Enthusiast, Product Manager, PMI-Certified Agile Practitioner"
+logo: "/assets/images/site_icon_white_5.png"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   What is the site about- coverage for insights in ai products, content technologies and the society.
@@ -59,7 +60,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Arthur"
+  name   : "Arthur C."
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Update Later"
   links:
