--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ search: true
 # Build settings
 markdown: kramdown
 repository: treize-khushrenada/mm-ghp
-remote_theme: mmistakes/minimal-mistakes
+#remote_theme: mmistakes/minimal-mistakes
 theme: minimal-mistakes-jekyll
 # Outputting
 permalink: /:categories/:title/
